Simplified footer, added programs as a new data collection, refactored datacontext into site repo

--- a/src/client/css/_banner.less
+++ b/src/client/css/_banner.less
@@ -160,6 +160,17 @@
     }
 }
 
+.site-banner p .callout {
+    background: orange;
+    color: white;
+    padding: 5px 12px;
+    border-radius: 3px;
+    font-size: 18px;
+    box-shadow: 0 0 14px rgba(255, 255, 0, 0.26);
+    margin-top: 20px;
+    display: inline-block;
+}
+
 // BANNER NAV BUTTONS =================================
 .site-banner nav a {
     position: absolute;
