--- a/src/client/css/_card.less
+++ b/src/client/css/_card.less
@@ -17,7 +17,7 @@
 
 .cards.cards-dark .card h4 {
     color: #ed9d13;
-    border-bottom: 3px solid #323232;
+    border-bottom: 1px solid rgba(50, 50, 50, 0.71);
     padding-left: 15px;
     padding-bottom: 10px;
     margin-bottom: 7px;
