--- a/src/client/js/pages/layout/nav.html
+++ b/src/client/js/pages/layout/nav.html
@@ -7,6 +7,13 @@
             <a ui-sref="shell.home" class="logo" ui-sref-opts="{reload: true}"></a>
             <!-- only show standard menu at bigger resolutions -->
             <nav class="nav-menu-standard">
+                <a href="tel:204-256-0672"><i class="facebook pull-right fa fa-phone"></i></a>
+                <a class="facebook pull-right">
+                    <i class="fa fa-envelope"></i>
+                </a>
+                <a href="http://www.facebook.com/rainbowdaynurseryinc" target="_blank" class="facebook pull-right">
+                    <i class="fa fa-facebook"></i>
+                </a>
                 <ul class="pull-right">
                     <li>
                         <a ui-sref="shell.home" ui-sref-opts="{reload: true}" ng-class="{'is-active' : vm.isActive('home')}">Home</a>
