--- a/src/client/css/_footer.less
+++ b/src/client/css/_footer.less
@@ -23,11 +23,13 @@
 // FOOTER HEADER ----------------------------
 .main-footer nav h3 {
     font-family: "Roboto";
-    font-weight: 600;
+    font-weight: 100;
     margin: 0 0 16px 0;
-    font-size: 24px;
+    font-size: 32px;
     opacity: .87;
     line-height: 32px;
+    color: rgba(255, 255, 255, 0.49);
+    letter-spacing: 0;
 }
 
 // FOOTER ITEM ----------------------------
@@ -47,11 +49,11 @@
 }
 
 // FOOTER (small footer) ----------------------------
-.main-footer footer {
+footer {
     text-align: center;
     padding: 16px;
     position: relative;
-    background: #253238;
-    color: #fff;
+    background: #353535;
+    color: rgba(255, 255, 255, 0.5);
+    font-size: 16px;
 }
-
