--- a/src/client/css/_site.list.less
+++ b/src/client/css/_site.list.less
@@ -27,13 +27,19 @@
     color: #ed9d13;
     width: 100%;
     display: inline-block;
-    padding-left: 30px;
-    padding-top: 15px;
-    padding-bottom: 15px;
+    padding: 15px 30px;
     text-decoration: none;
     text-transform: uppercase;
 }
 
+.site-list .panel-heading h4 a .callout {
+    background: orange;
+    color: white;
+    padding: 2px 12px;
+    border-radius: 3px;
+    font-size: 18px;
+    box-shadow: 0 0 14px rgba(255, 255, 0, 0.26);
+}
 
 .site-list .panel-heading {
     -moz-transition: all 400ms cubic-bezier(0.215,0.61,0.355,1);
