Got flexslider/light gallery working, moved the data from *.js files to json. Site repo resolved now in abstract route.

--- a/src/client/css/site.less
+++ b/src/client/css/site.less
@@ -5,10 +5,11 @@
 @import "_button.less";
 @import "_card.less";
 @import "_core.less";
-@import "_filter-box.less";
+@import "_filter.box.less";
 //@import "_fonts.less";
 @import "_footer.less";
 @import "_grid.less"; 
+@import "_light.box.less"; 
 @import "_map.less";
 @import "_nav.less";
 @import "_normalize.less";
