--- a/src/client/css/_section.less
+++ b/src/client/css/_section.less
@@ -87,24 +87,28 @@
     margin-bottom: 10px;
 }
 
-
 .section.section-orange .section-details h2 {
     color: rgba(255, 255, 255, 0.47);
 }
-
 
 .section .section-details .sub-title {
     margin-bottom: 35px;
     font-size: 18px;
     margin-top: -7px;
     line-height: 1.2em;
+    color: #333;
 }
 
+.section .section-details .details-lead p {
+    font-size: 16px;
+    color: #333;
+    margin-bottom: 20px;
+}
 
 .section .section-details p {
-    color: #333;
+    color: #666;
     line-height: 16px;
-    font-size: 16px;
+    font-size: 14px;
 }
 
 
