Fixed missing fonts on dist for flexslider, update web.config for woff2, some flex slider responsive fixes.

--- a/src/client/css/_fonts.less
+++ b/src/client/css/_fonts.less
@@ -1,4 +1,18 @@
-﻿@font-face {
+﻿// Flex Slider fonts - change the directory in which they are found
+@font-face {
+
+  font-family: 'flexslider-icon';
+  src:url('/fonts/flexslider-icon.eot');
+  src:url('/fonts/flexslider-icon.eot?#iefix') format('embedded-opentype'),
+    url('/fonts/flexslider-icon.woff') format('woff'),
+    url('/fonts/flexslider-icon.ttf') format('truetype'),
+    url('/fonts/flexslider-icon.svg#flexslider-icon') format('svg');
+  font-weight: normal;
+  font-style: normal;
+
+}
+
+/*@font-face {
     font-family: "Open Sans";
     src: url("/fonts/OpenSans-Regular.ttf");
     font-weight: normal;
@@ -36,5 +50,5 @@
     font-family: "Roboto";
     src: url("/fonts/Roboto-Bold.ttf");
     font-weight: 700;
-}
+}*/
 
