--- a/src/client/css/site.less
+++ b/src/client/css/site.less
@@ -6,8 +6,9 @@
 @import "_card.less";
 @import "_core.less";
 @import "_filter.box.less";
-//@import "_fonts.less";
+@import "_fonts.less";
 @import "_footer.less";
+@import "_flex.slider.less";
 @import "_grid.less"; 
 @import "_light.box.less"; 
 @import "_map.less";
