--- a/src/client/css/_nav.less
+++ b/src/client/css/_nav.less
@@ -67,16 +67,11 @@
     }
 }
 
-.navbar .nav-menu-standard .contact-nav {
-    margin-left: 20px;
-}
-
 .navbar .nav-menu-standard ul {
     list-style-type: none;
     margin: 0;
     padding-right: 40px;
     border-right: 1px solid rgba(255, 255, 255, 0.2);
-    margin-right: 20px;
 }
 
 .navbar .nav-menu-standard ul > li {
@@ -128,7 +123,11 @@
     font-size: 16px;
 }
 
-// FACEBOOK -----------------------------------------
+// CONTACT NAV -----------------------------------------
+.navbar .nav-menu-standard .contact-nav {
+    margin-left: 40px;
+}
+
 .nav-menu-standard .contact-nav a {
     border-radius: 30px;
     background-color: rgba(255, 255, 255, 0.64);
@@ -154,31 +153,10 @@
 }
 
 .nav-menu-standard .contact-nav a.contact-email {
-    font-size: 17px;
+    font-size: 16px;
+    line-height: 19px;
+    padding-left: 4px;
 }
-
-// SOCIAL MEDIA ------------------
-/*.nav-menu-standard .social-menu {
-    margin-left: 50px;
-    font-size: 24px;
-    padding-top: 11px;
-}
-
-.nav-menu-standard .social-menu a {
-    color: #292929;
-    background: rgba(255, 255, 255, 0.64);
-    display: inline-block;
-    width: 39px;
-    border-radius: 100px;
-    text-align: center;
-    height: 39px;
-    line-height: 36px;
-    opacity: 0.6;
-}
-
-.nav-menu-standard .social-menu a:hover {
-    opacity: 1;
-}*/
 
 // DROP DOWN MENU -------------------------------------
 .dropdown-menu > li:last-child {
@@ -216,7 +194,8 @@
     > li > a > h4 {
         font-size: 15px;
         margin: 0;
-        line-height: 11px color: #555;
+        line-height: 11px;
+        color: #333;
         font-weight: 800;
     }
 
@@ -226,7 +205,7 @@
 
 
     > li > a > small {
-        color: #666;
+        color: #000;
         font-size: 14px;
         text-transform: none;
         font-weight: 100;
