Site banner header changes on scroll, reorg css folder, added school logos

--- a/src/client/css/controls/_flex.slider.less
+++ b/src/client/css/controls/_flex.slider.less
@@ -1,6 +1,11 @@
+.flexslider-container {
+    overflow: hidden;
+}
+
 .flexslider {
     margin: 0 0 20px;
     min-height: 208px;
+    overflow: hidden;
 }
 
 .flexslider .slides img:hover {
@@ -20,3 +25,9 @@
     overflow: hidden;
     max-height: 20px;
 }
+
+.flexslider .slides img {
+    width: auto !important;
+    height: 200px;
+}
+
