--- a/src/client/css/site.less
+++ b/src/client/css/site.less
@@ -1,19 +1,37 @@
-@import "_animate.less";
-@import "_arrow.less";
-@import "_banner.less";
-@import "_business.card.less";
-@import "_button.less";
-@import "_card.less";
-@import "_core.less";
-@import "_filter.box.less";
-@import "_fonts.less";
-@import "_footer.less";
-@import "_flex.slider.less";
-@import "_grid.less"; 
-@import "_map.less";
-@import "_nav.less";
-@import "_normalize.less";
-@import "_page.less";
-@import "_section.less";
-@import "_site.list.less";  
-@import "_slider.less";
+// Animation
+@import "./animation/_animate.less";
+
+// Controls
+@import "./controls/_arrow.less";
+@import "./controls/_button.less";
+@import "./controls/_filter.box.less";
+@import "./controls/_flex.slider.less";
+@import "./controls/_map.less";
+
+// Core
+@import "./core/_core.less";
+@import "./core/_normalize.less";
+
+// Fonts
+@import "./fonts/_fonts.less";
+
+// Headers
+@import "./headers/_banner.less";
+@import "./headers/_banner.message.less";
+@import "./headers/_banner.striped.less";
+
+// Layout
+@import "./layout/_business.card.less";
+@import "./layout/_card.less";
+@import "./layout/_footer.less";
+@import "./layout/_grid.less"; 
+@import "./layout/_section.less";
+
+// Navigation
+@import "./navigation/_nav.less";
+
+// Static
+@import "./static/_site.list.less";  
+
+
+//@import "_slider.less";
