--- a/src/client/css/layout/_section.less
+++ b/src/client/css/layout/_section.less
@@ -1,11 +1,8 @@
-@import "_variables.less";
-
 // SECTIONS ----------------
 .section {
     padding-top: 50px;
-    padding-bottom: 50px;
+    padding-bottom: 30px;
 }
-
 
 .section.section-light-gray {
     background: #f1f1f1;
@@ -13,16 +10,13 @@
     border-top: 1px solid #eee;
 }
 
-
 .section.section-dark-gray {
     background-color: #eeeeee;
 }
 
-
 .section.section-blue {
     background-color: #0e1724;
 }
-
 
 .section.section-dark {
     background: #191919;
@@ -31,34 +25,27 @@
     box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
-
 .section.section-orange {
     background-color: #f1883f;
 }
 
-
 .section.has-navbar {
     margin-top: 59px;
 }
-
 
 // SECTION HEADERS ----------------
 .section.section-dark .section-header h2 {
     color: #cca300;
 }
 
-
 .section-header {
     padding-bottom: 20px;
     margin-bottom: 15px;
 }
 
-
-.section-header.tight {
-    margin-bottom: 0;
-    padding-top: 20px;
+.section-header.section-header-tight {
+    padding-bottom: 0;
 }
-
 
 .section-header h2 {
     font-size: 2em;
@@ -69,13 +56,11 @@
     font-family: "Roboto";
 }
 
-
 .section-header h2 .subdued {
     font-size: 18px;
     margin-left: 2px;
     color: #bbb;
 }
-
 
 // SECTION DETAILS ------------
 .section .section-details h2 {
@@ -92,7 +77,7 @@
 }
 
 .section .section-details .sub-title {
-    margin-bottom: 35px;
+    margin-bottom: 25px;
     font-size: 18px;
     margin-top: -7px;
     line-height: 1.2em;
@@ -111,7 +96,6 @@
     font-size: 14px;
 }
 
-
 // SECTION PARAGRAPH ------------
 .section .section-paragraph {
     font-size: 18px;
@@ -119,22 +103,22 @@
     margin-bottom: 30px;
 }
 
-
 .section.section-orange .section-paragraph {
     color: white;
 }
 
-
 // SECTION BODY -----------
 .section-body {
 }
-
 
 .section-body p {
     font-size: 17px;
     line-height: 1.8em;
 }
 
+.section-body .section-actions {
+    margin-top: 20px;
+}
 
 // TODO -----
 .section .hand {
