Created gulp-ftp task, site is now in prod, fixed up message/location data

--- a/src/client/css/controls/_flex.slider.less
+++ b/src/client/css/controls/_flex.slider.less
@@ -1,33 +1,28 @@
-.flexslider-container {
-    overflow: hidden;
-}
-
 .flexslider {
     margin: 0 0 20px;
     min-height: 208px;
     overflow: hidden;
-}
 
-.flexslider .slides img:hover {
-    cursor: pointer;
-}
+    .flexslider-container {
+        overflow: hidden;
+    }
 
-.lg-sub-html h4 {
-    font-size: 17px;
-    font-weight: normal;
-}
+    .flexslider .slides img:hover {
+        cursor: pointer;
+    }
 
-.lg-sub-html a {
-    color: rgba(255, 255, 255, 0.64);
-}
+    .flex-control-nav {
+        overflow: hidden;
+        max-height: 20px;
+    }
 
-.flex-control-nav {
-    overflow: hidden;
-    max-height: 20px;
-}
+    .slides img {
+        width: auto !important;
+        height: 200px;
+    }
 
-.flexslider .slides img {
-    width: auto !important;
-    height: 200px;
+    .flex-direction-nav a {
+        height: 45px;
+    }
 }
 
