--- a/src/client/css/headers/_banner.message.less
+++ b/src/client/css/headers/_banner.message.less
@@ -23,7 +23,8 @@
 
 @media (max-width: 640px) {
     .banner-message {
-        font-size: 12px;
+        font-size: 14px;
+        padding-bottom: 11px;
     }
 }
 
@@ -47,4 +48,3 @@
 .main-banner.has-banner-message {
     margin-top: 0;
 }
-
