--- a/src/client/css/site.less
+++ b/src/client/css/site.less
@@ -6,6 +6,7 @@
 @import "./controls/_button.less";
 @import "./controls/_filter.box.less";
 @import "./controls/_flex.slider.less";
+@import "./controls/_light.gallery.less";
 @import "./controls/_map.less";
 
 // Core
