--- a/src/client/css/controls/_map.less
+++ b/src/client/css/controls/_map.less
@@ -1,5 +1,6 @@
 .map {
     width: 100%;
+    max-width: 400px;
     border: 8px solid white;
     box-shadow: 0 0 10px rgba(0, 0, 0, 1), 0 0 20px black inset;
     cursor: pointer;
