--- a/src/client/css/layout/_business.card.less
+++ b/src/client/css/layout/_business.card.less
@@ -1,95 +1,80 @@
-
-@media screen and (min-width: 620px) {
-    .business-cards {
-        width: 98%;
-        padding: 0;
-        box-shadow: none;
-        border-radius: 0;
-        background-color: #eeeeee;
+.business-cards {
+    .card {
+        display: block;
+        color: #363f4d;
+        font-size: 18px;
+        line-height: 23px;
+        margin-bottom: 26px;
+        border: 1px solid #ccc;
+        padding: 14px 20px 19px 24px;
+        box-shadow: 5px 4px 10px rgba(17, 22, 29, 0.36), 1px 1px 31px rgba(0, 0, 0, 0.04) inset;
+        -webkit-transition: all 0.3s;
+        -moz-transition: all 0.3s;
+        -o-transition: all 0.3s;
+        transition: all 0.3s;
     }
-}
 
-@media screen and (max-width: 619px) {
-    .business-cards {
-        width: 98%;
-        max-width: 1000px;
-        position: relative;
-        margin: 0 auto;
-        background: #FFF;
-        box-shadow: 0 1px 2px rgba(0,0,0,0.3);
-        border-radius: 4px;
+    @media (max-width: 767px) {
+        .card {
+            box-shadow: none;
+            border: none;
+            border-top: 1px solid #ccc;
+        }
     }
-}
 
-@media screen and (min-width: 620px) {
-    .business-cards .business-card {
-        width: 45%;
-        height: 180px;
-        margin: 0 2% 20px 0;
-        padding: 2%;
-        float: left;
-        border: 0;
-        background: #FFF;
-        border-radius: 4px;
-        box-shadow: 0 1px 1px rgba(0,0,0,0.3);
+    .card:hover {
+        text-decoration: none;
     }
-}
 
-.business-cards .business-card .left {
-    width: 13%;
-    min-width: 75px;
-    min-height: 50px;
-    float: left;
-    display: block;
-}
-
-@media screen and (min-width: 620px) {
-    .business-cards .business-card .left {
-        width: 20%;
-        padding: 0;
+    @media (min-width: 767px) {
+        .card:hover {
+            -moz-transform: translate3d(0,-3px,0);
+            -ms-transform: translate3d(0,-3px,0);
+            -o-transform: translate3d(0,-3px,0);
+            -webkit-transform: translate3d(0,-3px,0);
+            transform: translate3d(0,-3px,0);
+            box-shadow: 0 8px 16px 0 rgba(0,0,0,0.4);
+            cursor: pointer;
+            text-decoration: none;
+        }
     }
-}
 
-.business-cards .business-card .right {
-    width: 70%;
-    float: left;
-    display: block;
-    margin: 0 0 0 1%;
-}
-
-@media screen and (min-width: 620px) {
-    .business-cards .business-card .right {
-        width: 71%;
+    .card:focus {
+        text-decoration: none;
     }
-}
 
-.business-cards .business-card .right h2 {
-    color: #333;
-    font-size: 28px;
-    font-family: 'Open Sans';
-    font-weight: 300;
-    display: block;
-    margin-top: .8em;
-    margin-bottom: .6em;
-    -moz-transition: color .3s ease-out;
-    -o-transition: color .3s ease-out;
-    -webkit-transition: color .3s ease-out;
-    transition: color .3s ease-out;
-}
+    .card h3 {
+        font-size: 20px;
+        line-height: 23px;
+        margin-bottom: 7px;
+    }
 
-.business-cards .business-card .right p {
-    color: #666;
-    font-size: 15px;
-    line-height: 1.4;
-    margin-bottom: 2px;
-}
+    .card .card-header {
+        display: block;
+        margin-bottom: 10px;
+        height: 50px;
+        background-size: contain;
+        width: 100%;
+        background-repeat: no-repeat;
+    }
 
-.business-cards .business-card .icon {
-    margin-top: 16px;
-    padding-left: 10px;
-}
+    .card .card-body {
+        display: block;
+    }
 
-.business-cards .business-card .icon i {
-    font-size: 60px;
-    color: #333333;
+    .card p {
+        font-size: 14px;
+        color: #363f4d;
+        margin-bottom: 0;
+    }
+
+    .card a {
+        font-size: 14px;
+    }
+
+    .card .link {
+        font-size: 14px;
+        text-decoration: underline;
+        cursor: pointer;
+    }
 }
