--- a/src/client/css/layout/_grid.less
+++ b/src/client/css/layout/_grid.less
@@ -8,7 +8,8 @@
 
 .grid .grid-text {
     margin: 0 0 2em;
-    font-size: 17px;
+    font-size: 15px;
     line-height: 1.6em;
     color: #4a4a4a;
+    padding-left: 20px;
 }
