--- a/src/client/css/layout/_section.less
+++ b/src/client/css/layout/_section.less
@@ -20,6 +20,7 @@
 
 .section.section-dark {
     background: #191919;
+    background: url('/img/dark-mosaic.png');
     -moz-box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
     -webkit-box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
     box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
@@ -87,13 +88,18 @@
 .section .section-details .details-lead p {
     font-size: 16px;
     color: #333;
-    margin-bottom: 20px;
+    margin-bottom: 15px;
 }
 
 .section .section-details p {
-    color: #666;
+    color: #333;
     line-height: 16px;
     font-size: 14px;
+    margin-bottom: 6px;
+}
+
+.section .section-details .details-trail {
+    margin-top:15px;
 }
 
 // SECTION PARAGRAPH ------------
@@ -112,8 +118,8 @@
 }
 
 .section-body p {
-    font-size: 17px;
-    line-height: 1.8em;
+    font-size: 15px;
+    line-height: 1.5em;
 }
 
 .section-body .section-actions {
