Cleaned up how school/program filtering is done, Added program filter on home.

--- a/src/client/css/headers/_banner.striped.less
+++ b/src/client/css/headers/_banner.striped.less
@@ -113,6 +113,12 @@
 }
 
 // BANNER NAV BUTTONS =================================
+@media (max-width: 1024px) {
+  .site-banner nav {
+    display: none !important;
+  }
+}
+
 .site-banner nav a {
     position: absolute;
     top: 160px;
