Changed how the fixed site banner works, Merged programs

--- a/src/client/css/layout/_business.card.less
+++ b/src/client/css/layout/_business.card.less
@@ -6,7 +6,7 @@
         line-height: 23px;
         margin-bottom: 26px;
         border: 1px solid #ccc;
-        padding: 14px 20px 19px 24px;
+        padding: 14px 20px 10px 24px;
         box-shadow: 5px 4px 10px rgba(17, 22, 29, 0.36), 1px 1px 31px rgba(0, 0, 0, 0.04) inset;
         -webkit-transition: all 0.3s;
         -moz-transition: all 0.3s;
@@ -19,6 +19,7 @@
             box-shadow: none;
             border: none;
             border-top: 1px solid #ccc;
+            margin-bottom: 0;
         }
     }
 
@@ -46,7 +47,7 @@
     .card h3 {
         font-size: 20px;
         line-height: 23px;
-        margin-bottom: 7px;
+        margin-bottom: 16px;
     }
 
     .card .card-header {
@@ -76,5 +77,11 @@
         font-size: 14px;
         text-decoration: underline;
         cursor: pointer;
+    }
+
+    .card .footnote {
+        font-size: 12px;
+        margin-top: 17px;
+        color: #666;
     }
 }
