--- a/src/client/css/site.less
+++ b/src/client/css/site.less
@@ -19,7 +19,8 @@
 // Headers
 @import "./headers/_banner.less";
 @import "./headers/_banner.message.less";
-@import "./headers/_banner.striped.less";
+@import "./headers/_site.banner.less";
+@import "./headers/_site.banner.fixed.less";
 
 // Layout
 @import "./layout/_business.card.less";
