Fixed banner changes.

--- a/src/client/css/core/_core.less
+++ b/src/client/css/core/_core.less
@@ -40,3 +40,11 @@ h2, h3 {
 .no-scroll {
   overflow-y: hidden;
 }
+
+.no-select {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
