--- a/src/client/css/navigation/_nav.less
+++ b/src/client/css/navigation/_nav.less
@@ -130,12 +130,11 @@
 
 .nav-menu-standard .contact-nav a {
     border-radius: 30px;
-    background-color: rgba(255, 255, 255, 0.64);
     padding: 5px 5px 5px 3px;
     display: inline-block;
     width: 31px;
     height: 31px;
-    color: #3C3D3D;
+    color: rgba(255, 255, 255, 0.64);
     text-align: center;
     margin-top: 15px;
     font-size: 21px;
@@ -154,19 +153,19 @@
 
 .nav-menu-standard .contact-nav a.contact-email {
     font-size: 18px;
-    padding-left: 5px;  
+    padding-left: 5px;
 }
 
 .nav-menu-standard .contact-nav a.contact-email:hover {
-    background-color: rgb(215,73,54);
+    color: #FF6B57;
 }
 
 .nav-menu-standard .contact-nav a.contact-facebook:hover {
-    background-color: rgb(77,103,163);
+    color: #268FFF;
 }
 
 .nav-menu-standard .contact-nav a.contact-phone:hover {
-    background-color: rgb(82,231,107);
+    color: rgb(82,231,107);
 }
 
 // DROP DOWN MENU -------------------------------------
