Fixed header change, light gallery transition change.

--- a/src/client/css/headers/_site.banner.fixed.less
+++ b/src/client/css/headers/_site.banner.fixed.less
@@ -1,12 +1,12 @@
 .site-banner-fixed {
     position: fixed;
-    background-color: #2b2d32;
+    background-color: #cc7b19;
     top: 59px;
     height: 63px;
     width: 100%;
     z-index: 1;
     text-align: center;
-    box-shadow: 0 0 11px rgba(0, 0, 0, 0.31);
+    box-shadow: 0 0 11px rgba(0, 0, 0, 0.64);
     -moz-transform: translateY(-100px);
     -ms-transform: translateY(-100px);
     -o-transform: translateY(-100px);
@@ -32,7 +32,7 @@
 
     .title h1 {
         display: inline-block;
-        font-size: 36px;
+        font-size: 32px;
         line-height: 64px;
         text-transform: uppercase;
         color: white;
