Corrections to site data.

--- a/src/client/css/headers/_site.banner.fixed.less
+++ b/src/client/css/headers/_site.banner.fixed.less
@@ -1,6 +1,6 @@
 .site-banner-fixed {
     position: fixed;
-    background-color: #cc7b19;
+    background-color: #EF8300;
     top: 59px;
     height: 63px;
     width: 100%;
