--- a/src/client/css/site.css
+++ b/src/client/css/site.css
@@ -563,7 +563,7 @@ ul {
 }
 .site-banner-fixed {
   position: fixed;
-  background-color: #cc7b19;
+  background-color: #EF8300;
   top: 59px;
   height: 63px;
   width: 100%;
