--- a/src/client/css/layout/_footer.less
+++ b/src/client/css/layout/_footer.less
@@ -6,6 +6,10 @@
     background: #353535;
     color: rgba(255, 255, 255, 0.5);
     font-size: 13px;
+
+    p {
+        margin-bottom: 4px;
+    }
     //FOOTER TO TOP ----------------------------
     .to-top {
         position: fixed;
@@ -101,5 +105,10 @@
     .footer-contact ul li a.contact-email {
         font-size: 17px;
         padding-top: 7px;
+    }
+    // MISC ---------------------------
+    .minor-text {
+        font-size: 12px;
+        color: #777;
     }
 }
